# CyberdeckProject

./: .clang-format  CMakeLists.txt  Cyberdeck.drawio  README.md
Libraries/: CMakeLists.txt
Notes/: cyberDeckPlan  folderStructure  ledMatrixFrameworkPlan
Projects/: main.cpp
Projects/Common/: Config.cpp  PythonScript.cpp
Projects/Common/Include/: Config.h  PythonScript.h
Projects/CyberdeckApp/: CyberdeckApp.cpp
Projects/CyberdeckApp/Include/: CyberdeckApp.h
Projects/ProcessHandler/: ProcessHandler.cpp  PythonHandler.cpp
Projects/ProcessHandler/Include/: ProcessHandler.h  PythonHandler.h
Projects/SerialFramework/: SerialDevice.cpp
Projects/SerialFramework/Include/: SerialDevice.h
PythonScripts/: testLedMatrix.py
